tests/ui/errors/snapshots/equality_rejects_nested_noncomparable_struct.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot derive equality
   ╭─[test.lis:8:3]
 7 │ struct Outer {
 8 │   inner: Inner,
   ·   ──┬──
   ·     ╰── `inner` cannot be compared
 9 │ }
   ╰────
  help: `#[equality]` cannot compare a struct containing non-comparable fields. Give `Outer` a hand-written `equals` method, mark the field's type `#[equality]`, or remove the field · code: [attribute.cannot_derive_equality]
