tests/ui/errors/snapshots/equality_rejects_public_type_private_equals_cross_module.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot derive equality
   ╭─[main.lis:5:17]
 4 │ #[equality]
 5 │ struct Holder { item: models.Item }
   ·                 ──┬─
   ·                   ╰── `item` cannot be compared
   ╰────
  help: `#[equality]` cannot compare a struct containing non-comparable fields. Give `Holder` a hand-written `equals` method, mark the field's type `#[equality]`, or remove the field · code: [attribute.cannot_derive_equality]
