tests/ui/errors/snapshots/equality_rejects_stronger_interface_bound_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[equality]` conflicts with a bounded `equals`
    ╭─[test.lis:12:1]
 11 │ 
 12 │ #[equality]
    · ─────┬─────
    ·      ╰── would synthesize an `equals` of its own
 13 │ struct Box<T: Parent> { value: T }
    ╰────
  help: A hand-written `equals` must carry the same generic bounds as the type, or it strengthens the type for every instantiation. Match the type's bounds, or remove `#[equality]` · code: [attribute.equality_bounded_equals]
