tests/ui/errors/snapshots/impl_bound_must_be_declared_on_receiver_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `impl` cannot strengthen receiver bounds
   ╭─[test.lis:6:9]
 5 │ 
 6 │ impl<T: Parent<string>> Box<T> {
   ·         ───────┬──────
   ·                ╰── this bound is not guaranteed by `Box`'s declaration
 7 │   fn less(self, _other: Box<T>) -> bool {
   ╰────
  help: Declare this bound on `Box`, or remove it from the `impl` · code: [infer.impl_bound_strengthens_type]
